routes changed, new functions
